golden thread restart/restructure with non functional charitylist and charity profile pages

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,7 @@
 <ion-nav [root]="rootPage"></ion-nav>
+
+<!-- <ion-header>
+        <ion-navbar>
+          <ion-title class="headerstyle">Charity App</ion-title>
+        </ion-navbar>
+      </ion-header> -->
