--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,13 +34,14 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #8bd4df,
+  secondary:  #acd14d,
+  danger:     #fbb040,
+  light:      #f9b2dd,
+  dark:       #fff200,
 );
-
+// $toolbar-ios-title-text-color: blue;
+// $toolbar-ios-title-font-size: 30px;
 
 // App iOS Variables
 // --------------------------------------------------
